Fix orders modal spacing

--- a/src/components/modal/order/OrdersModal.css
+++ b/src/components/modal/order/OrdersModal.css
@@ -3,6 +3,10 @@
   font-weight: 400;
 }
 
+.orders {
+  margin-bottom: 10px;
+}
+
 .orders > :first-child {
   margin-top: 0;
 }
